syntax = "proto3";

package fun;

option go_package = "funpb";
option java_multiple_files = true;
option java_outer_classname = "FundingProto";
option java_package = "com.fun";

import "document/service.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

// FundingService contains all common interactions for funding extension documents
service FundingService {
  rpc GetVersion(GetVersionRequest) returns (FundingResponse) {
    option (google.api.http) = {
      get: "/v1/documents/{document_id}/versions/{version_id}/funding_agreements/{agreement_id}"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Get a funding agreement of a document version"
    };
  }
  rpc GetListVersion(GetListVersionRequest) returns (FundingListResponse) {
    option (google.api.http) = {
      get: "/v1/documents/{document_id}/versions/{version_id}/funding_agreements"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      description: "Get all funding agreements of a document version"
    };
  }
}

message FundingCreatePayload {
  string document_id = 1;
  FundingData data = 2;
}

message FundingUpdatePayload {
  string document_id = 1;
  string agreement_id = 2;
  FundingData data = 3;
}

message FundingResponse {
  document.ResponseHeader header = 1;
  FundingResponseData data = 2;
}

message FundingListResponse {
  document.ResponseHeader header = 1;
  repeated FundingResponseData data = 2;
}

message Request {
  string document_id = 1;
  string agreement_id = 2;
}

message GetVersionRequest {
  string document_id = 1;
  string version_id = 2;
  string agreement_id = 3;
}

message GetListRequest {
  string document_id = 1;
}

message GetListVersionRequest {
  string document_id = 1;
  string version_id = 2;
}

// FundingData is the default funding extension schema
message FundingData {
  string agreement_id = 1;
  string amount = 2;
  string apr = 3;
  string days = 4;
  string fee = 5;
  string repayment_due_date = 7; //(e.g. invoice date + grace days)
  string repayment_occurred_date = 8;
  string repayment_amount = 9;
  string currency = 10; // optional if not set currency of payment details will be used
  string nft_address = 11;
  string payment_details_id = 12;
  string funder_id = 13;
  string borrower_id = 14;
}

message FundingResponseData {
  FundingData funding = 1;
  repeated FundingSignature signatures = 2;
}

message FundingSignature {
  string valid = 1;
  string outdated_signature = 2;
  string identity = 3;
  string signed_version = 4;
}
